# Django_Starter_App

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
mysite/dash/: tests.py  urls.py  views.py
mysite/dash/templates/dash/: index.html
mysite/mysite/: settings.py  urls.py
mysite/polls/: apps.py  tests.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
